--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build  && node w3infoclear.js",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "export": "next build && next export"
   },
   "dependencies": {
     "bootstrap": "^5.3.7",
